--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,26 @@ plugins {
     id "io.freefair.lombok" version "6.0.0-m2"
 }
 
-group = 'tcinet.igafarov'
-version = '1.0-SNAPSHOT'
+compileJava {
+    options.encoding = 'UTF-8'
+}
 
-def restAssuredVersion = "5.3.1",
-    allureVersion = "2.21.0"
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
+repositories {
+    mavenCentral()
+}
+
+def slf4jVersion = "2.0.9",
+    junitVersion = "5.10.1",
+    restAssuredVersion = "5.3.1",
+    allureVersion = "2.21.0",
+    selenideVersion = "6.19.1",
+    ownerVersion = "1.0.12",
+    webdrivermanagerVersion = "5.6.3"
+
 
 allure {
     report {
@@ -24,33 +39,22 @@ allure {
     }
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation('org.junit.jupiter:junit-jupiter',
-            'io.rest-assured:rest-assured:5.4.0',
-            'io.rest-assured:json-schema-validator:5.4.0',
+    testImplementation(
+            "io.rest-assured:rest-assured:$restAssuredVersion",
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "io.rest-assured:json-schema-validator:$restAssuredVersion",
             "io.qameta.allure:allure-rest-assured:$allureVersion",
-            'org.assertj:assertj-core:3.24.2',
-            'org.slf4j:slf4j-simple:2.0.7')
-}
-
-compileJava {
-    options.encoding = 'UTF-8'
-}
-
-compileTestJava {
-    options.encoding = 'UTF-8'
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
+            "io.github.bonigarcia:webdrivermanager:$webdrivermanagerVersion",
+            "com.codeborne:selenide:$selenideVersion",
+            "org.aeonbits.owner:owner:$ownerVersion")
+    testRuntimeOnly ("org.slf4j:slf4j-simple:$slf4jVersion")
 }
 
 tasks.withType(Test) {
-
     useJUnitPlatform()
     systemProperties(System.getProperties())
-
     testLogging {
         lifecycle {
             events "started", "skipped", "failed", "standard_error", "standard_out"
@@ -58,4 +62,20 @@ tasks.withType(Test) {
         }
     }
 }
+task books_Test(type: Test) {
+    useJUnitPlatform {
+        includeTags("books_Test")
+    }
+}
 
+task positive_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags("positive")
+    }
+}
+
+task negative_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags("negative")
+    }
+}
